@@ -2,16 +2,17 @@ Package: brms
 Encoding: UTF-8
 Type: Package
 Title: Bayesian Regression Models using Stan
-Version: 1.3.0.9000
+Version: 1.3.1
 Date: 2016-12-17
 Authors@R: person("Paul-Christian", "Bürkner", email = "paul.buerkner@gmail.com",
   role = c("aut", "cre"))
 Depends: 
     R (>= 3.2.0),
-    rstan (>= 2.13.2),
+    Rcpp (>= 0.12.0),
+    ggplot2 (>= 2.0.0),
     methods
 Imports: 
-    ggplot2 (>= 2.0.0),
+    rstan (>= 2.13.2),
     loo (>= 0.1.6),
     shinystan (>= 2.2.1),
     lme4 (>= 1.1-11),
