@@ -148,6 +148,7 @@ export(zero_inflated_beta)
 export(zero_inflated_binomial)
 export(zero_inflated_negbinomial)
 export(zero_inflated_poisson)
+import(Rcpp)
 import(abind)
 import(ggplot2)
 import(methods)
